<resources>
    <string name="app_name">GreenChat</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_out">Log Out</string>
    <string name="home_menu_app_settings">App Settings</string>
    <string name="hint_password">Password</string>
    <string name="txt_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="txt_no_account_yet">No account yet ?</string>
    <string name="hint_username">Username</string>
    <string name="txt_create_account">Create Account</string>
    <string name="txt_already_a_member">Already a member ?</string>
    <string name="description_email">Please, input your email !</string>
    <string name="txt_new_account_start">New Account</string>
    <string name="introduction">Welcome to jugurtha-Green Social !\n Enjoy real-time messenging…\n and much more features.</string>
    <string name="txt_signup_with_start">Sign-up with...</string>
    <string name="txt_login_to_your_account">Login to your Account.</string>
    <string name="txt_create_new_account">Create a new Account.</string>
    <string name="home_menu_account_settings">Account Settings</string>
    <string name="home_menu_all_users">All Users</string>
    <string name="home_menu_contact_us">Contact us</string>
    <string name="home_menu_about">About</string>
    <string name="home_menu_disconnect">Disconnect</string>
    <string name="success_disconnected">You have successfully Disconnected !</string>
    <string name="title_bar_home">Home</string>
    <string name="login_to_your_account">Login to your Account.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_status">Hi there, </string>
</resources>
