<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_start"
    tools:context=".StartActivity"
    tools:layout_editor_absoluteY="25dp">


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="168dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/app_name"
        android:padding="15dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/green_earth_jugu"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="107dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:focusable="auto"
        android:fontFamily="@font/bad_script"
        android:padding="1dp"
        android:text="@string/introduction"
        android:textAlignment="center"
        android:textColor="@color/colorText_transparent"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <Button
        android:id="@+id/start_btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:alpha="0.8"
        android:text="@string/login_to_your_account"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/start_btn_signup"
        app:layout_constraintEnd_toEndOf="@+id/start_btn_signup"
        app:layout_constraintStart_toStartOf="@+id/start_btn_signup" />

    <Button
        android:id="@+id/start_btn_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:alpha="0.8"
        android:text="@string/txt_create_new_account"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/start_btn_signup_with"
        app:layout_constraintEnd_toEndOf="@+id/start_btn_signup_with"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/start_btn_signup_with" />

    <Button
        android:id="@+id/start_btn_signup_with"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:alpha="0.8"
        android:background="@drawable/_selector_button_disabled"
        android:text="@string/txt_signup_with_start"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
